syntax = "proto3";

option java_multiple_files = true;

package lighting;

service LightingService{
rpc turnOnLights(Empty) returns (StringResponse);
rpc turnOffLights(Empty) returns (StringResponse);
rpc changeLightsSetting(LightsSetting) returns (StringResponse);
rpc changeLightingLevel(IntRequest) returns (StringResponse);
}

message LightsSetting{
    enum Setting {
        BLUE = 0;
       	GREEN = 1;
        RED = 2;
        ORIGINAL = 3;
    }
     Setting setting = 1;
}

message IntResponse{
	int32 value = 1;
}

message IntRequest{
    int32 value = 1;
}

message StringResponse{
	string text = 1;
}

message Empty{}